WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239435
[GStreamer] Pipewire display capture broken
https://bugs.webkit.org/show_bug.cgi?id=239435
Summary
[GStreamer] Pipewire display capture broken
Philippe Normand
Reported
2022-04-17 09:21:03 PDT
Currently results in opening the camera device instead of the actual display capture source...
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2022-04-17 09:28:48 PDT
https://github.com/WebKit/WebKit/pull/306
EWS
Comment 2
2022-04-28 11:45:58 PDT
Committed
r293580
(
250094@main
): <
https://commits.webkit.org/250094@main
> Reviewed commits have been landed. Closing PR #306 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-04-28 11:46:19 PDT
<
rdar://problem/92478433
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug